--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -53,8 +53,8 @@ performanceLog=false
 remoteDebuggingPort=false
 
 # Testinium Configuration
-# testiniumHubUrl=http://localhost:4444/wd/hub
-testiniumHubUrl=http://host.docker.internal:4444/wd/hub
+testiniumHubUrl=http://localhost:4444/wd/hub
+# testiniumHubUrl=http://host.docker.internal:4444/wd/hub
 testiniumWaitElementTimeout=30
 testiniumPollingEveryMilliSecond=300
 proxyActive=false
